PIE microsite @v1.21.0 - css fixes (#48)
* fix toggles vs tabs zindex issue when scrolling on mobile

* fix horizontal scrolling on page

* update changelog

--- a/apps/pie-microsite/src/assets/styles/components/_tabs.scss
+++ b/apps/pie-microsite/src/assets/styles/components/_tabs.scss
@@ -3,6 +3,7 @@
 $tabs-link-padding:                f.spacing(d);
 
 .c-tabs {
+  z-index: f.zIndex(mid);
   font-weight: f.$font-weight-bold;
   padding: 0;
 
@@ -51,7 +52,7 @@ $tabs-link-padding:                f.spacing(d);
     width: 100%;
     overflow: auto;
     white-space: nowrap;
-    margin-left: f.spacing(d);
+    padding-left: f.spacing(d);
 
     ul {
       margin: 0;
